<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.xxy.maple.tllibrary.activity.TlWalletPayActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageButton
            android:id="@+id/ibt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_arrow_back_black" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_title"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/font_title" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorBackground"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/colorWhite">


            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_side"
                android:text="@string/text_detail"
                android:textColor="@color/colorPress"
                android:textSize="@dimen/font_bigger"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_tip_loadn_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_side"
                android:text="@string/text_loadn_address"
                android:textColor="@color/colorPress"
                android:textSize="@dimen/font_common"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail" />


            <TextView
                android:id="@+id/tv_loadn_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="26dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/font_common"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_loadn_address" />

            <TextView
                android:id="@+id/tv_tip_contract_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_side"
                android:paddingTop="@dimen/padding_side"
                android:text="@string/text_contract_address"
                android:textColor="@color/colorPress"
                android:textSize="@dimen/font_common"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_loadn_address" />

            <TextView
                android:id="@+id/tv_contract_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="26dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/font_common"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_contract_address" />


            <TextView
                android:id="@+id/tv_tip_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_side"
                android:paddingTop="@dimen/padding_side"
                android:textColor="@color/colorPress"
                android:textSize="@dimen/font_common"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_contract_address" />

            <TextView
                android:id="@+id/tv_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_common"
                android:paddingTop="@dimen/padding_side"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/font_common"
                app:layout_constraintLeft_toRightOf="@id/tv_tip_fee"
                app:layout_constraintTop_toBottomOf="@id/tv_contract_address" />


            <TextView
                android:id="@+id/tv_tip_service_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_side"
                android:paddingTop="@dimen/padding_side"
                android:text="@string/text_fee"
                android:textColor="@color/colorPress"
                android:textSize="@dimen/font_common"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_fee" />

            <TextView
                android:id="@+id/tv_service_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_common"
                android:paddingTop="@dimen/padding_side"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/font_common"
                app:layout_constraintLeft_toRightOf="@id/tv_tip_service_fee"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_fee" />


            <TextView
                android:id="@+id/tv_tip_mining_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_side"
                android:paddingTop="@dimen/padding_side"
                android:text="@string/text_mining_fee"
                android:textColor="@color/colorPress"
                android:textSize="@dimen/font_common"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_service_fee" />

            <TextView
                android:id="@+id/tv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_common"
                android:paddingTop="@dimen/padding_side"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/font_common"
                app:layout_constraintLeft_toRightOf="@id/tv_tip_mining_fee"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_service_fee" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="@dimen/padding_side"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/font_common"
                android:text="ETH"
                app:layout_constraintLeft_toRightOf="@id/tv_value"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_service_fee" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="4dp"
                android:minHeight="4dp"
                android:paddingLeft="@dimen/padding_side"
                android:paddingRight="@dimen/padding_side"
                android:paddingTop="@dimen/padding_common"
                android:progressDrawable="@drawable/drawable_seekbar"
                android:thumb="@drawable/ic_seekbar_thumb"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_mining_fee" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_side"
                android:text="@string/text_min"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/font_common"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seekBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_side"
                android:text="@string/text_max"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/font_common"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seekBar" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:enabled="false"
                android:background="@drawable/selector_default_btn"
                android:gravity="center"
                android:text="@string/text_submit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</LinearLayout>

